# medical

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  rename_directories.bat
context1_agent/: Dockerfile  agent_harness.py  app.py  pyproject.toml
context_graph_service/: Dockerfile  app.py  config.py  graph_client.py  pyproject.toml
deployment/jarvislabs/: README.md  bootstrap_envs.sh  bootstrap_host.sh  jarvislabs.env.example  launch_stack.sh  launch_text_chat_stack.sh  stop_stack.sh
documnet ocr/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
documnet ocr/medicscan_ocr/: __init__.py  __main__.py  analysis.py  app.py  cli.py  config.py  document.py  fusion.py  preprocess.py  routing.py  schemas.py  service.py
documnet ocr/medicscan_ocr/backends/: __init__.py  base.py  firered.py  granite_vision.py  local_commands.py  sarvam.py
documnet ocr/medicscan_ocr/models/: __init__.py  handwriting.py  language.py
documnet ocr/medicscan_ocr/utils/: __init__.py  archive.py  files.py  sorting.py  text.py
documnet ocr/tests/: test_document_prepare.py  test_handwriting_language.py  test_routing.py  test_service_dry_run.py
evaluation/: __init__.py  granite_eval.py  test_granite_eval.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  ErrorBoundary.jsx  Sidebar.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/hooks/: useVoiceAssistant.js  useWebSocket.js
frontend/src/pages/: ChatPage.jsx  DashboardPage.jsx  ForgotPasswordPage.jsx  LoginPage.jsx  RegisterPage.jsx  SettingsPage.jsx  VerifyEmailPage.jsx
frontend/src/services/: api.js
frontend/src/stores/: useStore.js
frontend/src/styles/: globals.css
general_llm/: Dockerfile  app.py  pyproject.toml
granite_vision_sidecar/: Dockerfile  start_server.py
medical_llm/: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
medical_llm/config/: model_config.jarvislabs_a6000x8.yaml  model_config.jarvislabs_text.yaml  model_config.yaml  pipeline_config.jarvislabs_text.yaml  pipeline_config.yaml
medical_llm/core/: __init__.py
medical_llm/core/execution/: __init__.py  parallel_executor.py
medical_llm/core/fusion/: __init__.py  meta_fusion.py
medical_llm/core/governance/: __init__.py  audit.py
medical_llm/core/input/: __init__.py  medical_ner.py  negation_detector.py  query_classifier.py  symptom_extractor.py
medical_llm/core/models/: __init__.py  base_model.py
medical_llm/core/models/clinical/: __init__.py  biomistral_engine.py  clinical_camel_engine.py  med42_engine.py
medical_llm/core/models/conversational/: __init__.py  chatdoctor_engine.py
medical_llm/core/models/medical/: __init__.py  meditron_engine.py  mellama_engine.py  openbiollm_engine.py  pmc_llama_engine.py
medical_llm/core/models/reasoning/: __init__.py  deepseek_engine.py
medical_llm/core/rag/: __init__.py  knowledge_base.py  medical_rag.py  pubmed_fetcher.py  retrieval_pipeline.py  web_search.py
medical_llm/core/response/: __init__.py  report_generator.py
medical_llm/core/routing/: __init__.py  smart_router.py
medical_llm/core/safety/: __init__.py  safety.py
medical_llm/tests/: conftest.py  test_api.py  test_config.py  test_execution.py  test_fusion.py  test_input_layer.py  test_rag.py  test_routing.py  test_safety.py  test_smoke.py
mediscan_v70_sota_production/deploy/jarvislabs/: execution_strategy.py  gpu_allocation.py  hardware_config_8xa6000.yaml  install_neo4j.sh  launch.sh  monitor_gpus.py  quickstart.ipynb  run_all.sh  sequential_loader.py  setup.sh
mediscan_v70_sota_production/mediscan_v70/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  api_server.py  kaggle_mediscan_v70.py  main.py  requirements.txt
mediscan_v70_sota_production/mediscan_v70/config/: hardware_config.yaml  model_config.yaml  pipeline_config.yaml
mediscan_v70_sota_production/mediscan_v70/core/: __init__.py
mediscan_v70_sota_production/mediscan_v70/core/execution/: __init__.py  parallel_executor.py
mediscan_v70_sota_production/mediscan_v70/core/fusion/: __init__.py  multi_model_fusion.py
mediscan_v70_sota_production/mediscan_v70/core/gov/: __init__.py  governance.py
mediscan_v70_sota_production/mediscan_v70/core/ingestion/: __init__.py  dicom_loader.py  image_loader.py  modality_detector.py  quality_assessor.py  video_loader.py
mediscan_v70_sota_production/mediscan_v70/core/intelligence/: __init__.py  intelligence_engine.py  medical_prompts.py  synthesis_fusion.py
mediscan_v70_sota_production/mediscan_v70/core/memory/: patient_history.py
mediscan_v70_sota_production/mediscan_v70/core/models/: __init__.py
mediscan_v70_sota_production/mediscan_v70/core/monitoring/: __init__.py  monitoring.py
openrag_service/: Dockerfile  agentic_rag.py  app.py  config.py  ingestion.py  pyproject.toml
platform/: Dockerfile  __init__.py  alembic.ini  health_utils.py  main.py  pyproject.toml
platform/alembic/: env.py
platform/auth/: __init__.py  api_keys.py  dependencies.py  schemas.py  service.py  token_blocklist.py
platform/cache/: __init__.py  service.py
platform/config/: settings.py
platform/db/: __init__.py  base.py  init.sql  models.py  resilience.py  session.py
platform/gateway/: app.py  concurrency.py  metrics.py  middleware.py
platform/gateway/routes/: __init__.py  auth.py  chat.py  doctors.py  health.py  hospitals.py  patients.py  websocket.py
platform/observability/: __init__.py  tracing.py
platform/router/: __init__.py  intent_router.py  master_router.py
platform/search/: engine.py
platform/security/: __init__.py  audit.py  encryption.py  input_validator.py  rate_limiter.py  safety_pipeline.py
platform/services/: __init__.py  llm_service.py  voice_service.py
platform/tests/: test_master_router_health.py  test_voice_support.py
scripts/: download_models.py  system_readiness.py
(+31 files in other folders)
